--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,17 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_action_button">Action Button</string>
+    <string name="title_activity_action_button">Action Tab</string>
     <string name="action_search">Search</string>
     <string name="tab_a">TAB A</string>
     <string name="tab_b">TAB B</string>
     <string name="tab_c">TAB C</string>
     <string name="tab_d">TAB D</string>
     <string name="share">Share</string>
+    <string name="fragment_a_content">Fragment A content</string>
+    <string name="fragment_b_content">Fragment B Content</string>
+    <string name="fragment_c_content">Fragment C Content</string>
+    <string name="fragment_a_title">Fragment A</string>
+    <string name="fragment_b_title">Fragment B</string>
+    <string name="fragment_c_title">Fragment C</string>
 </resources>
