--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
 
     <string name="send_message">Send Message</string>
     <string name="message">Message</string>
+    <string name="title_activity_interact_app">Interact App</string>
 </resources>
