--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,14 @@
     <string name="send_message">Send Message</string>
     <string name="message">Message</string>
     <string name="title_activity_interact_app">Interact App</string>
+    <string name="title_activity_share_data">Share Data</string>
+    <string name="title_activity_audio_manager">Manager Audio</string>
+    <string name="title_activity_capture_photo">Photo Capture</string>
+    <string name="capture_photo">Capture photo</string>
+
+    <string name="drawer_open">Capture drawer</string>
+    <string name="drawer_close">Close drawer</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
