--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_material_design">Material Design</string>
+    <string name="title_activity_material_recycler">Material Recycler</string>
+    <string name="title_activity_material_card">Material Card</string>
 </resources>
