--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,11 @@
     <string name="drawer_open">Capture drawer</string>
     <string name="drawer_close">Close drawer</string>
 
+    <string name="card_content_sample">
+        CardView extends the FrameLayout class and lets you show information inside cards that have a consistent look across the platform.
+        CardView widgets can have shadows and rounded corners.
+    </string>
+
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_material_recycler">Material Recycler</string>
