--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_material_recycler">Material Recycler</string>
     <string name="title_activity_material_card">Material Card</string>
+    <string name="title_activity_material_tab">Material Tab</string>
+    <string name="title_activity_material_app_bar">App Bar</string>
 </resources>
