Add material card view and dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="title_activity_material_card">Material Card</string>
     <string name="title_activity_material_tab">Material Tab</string>
     <string name="title_activity_material_app_bar">App Bar</string>
+    <string name="title_activity_material_dialog">Dialog</string>
 </resources>
